feat: create PartnerPage
